chore: 第10章で使用するツール`deterministic-zip`のインストールコマンドを追加

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
     },
     "workspaceFolder": "/workspace",
     "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind",
-    "postCreateCommand": "sudo chown node node_modules",
+    // NOTE: deterministic-zip のインストール（第10章で使用）
+    "postCreateCommand": "curl -sS https://raw.githubusercontent.com/timo-reymann/deterministic-zip/main/installer | bash",
     "remoteUser": "node",
     "customizations": {
         "vscode": {
